Remove testing code

--- a/index.html
+++ b/index.html
@@ -11,17 +11,7 @@
     <div class="container">
       <div class="header"></div>
       <div class="content">
-        <div class="gameboard">
-          <!-- <div data-row="0" data-col="0" class="cell">x</div>
-          <div data-row="0" data-col="1" class="cell">o</div>
-          <div data-row="0" data-col="2" class="cell"></div>
-          <div data-row="1" data-col="0" class="cell"></div>
-          <div data-row="1" data-col="1" class="cell"></div>
-          <div data-row="1" data-col="2" class="cell"></div>
-          <div data-row="2" data-col="0" class="cell"></div>
-          <div data-row="2" data-col="1" class="cell">o</div>
-          <div data-row="2" data-col="2" class="cell">x</div> -->
-        </div>
+        <div class="gameboard"></div>
       </div>
       <div class="footer"></div>
     </div>
